--- a/projects.html
+++ b/projects.html
@@ -171,7 +171,7 @@
             </h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <div class="group relative aspect-[9/16] bg-neutral-800 rounded-xl overflow-hidden cursor-pointer">
-                    <video src="assets/works/Ai contents/Falcon-Automation across Saudi.mp4"
+                    <video src="assets/works/Ai contents/Falcon-Automation Across Saudi.mp4"
                         class="absolute inset-0 w-full h-full object-cover" controls playsinline
                         preload="metadata"></video>
                     <div
